refactor: altera a estrutura das pastas

--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="images/riot-icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js" defer></script>
+    <link rel="shortcut icon" href="src/images/riot-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/style.css">
+    <script src="src/js/script.js" defer></script>
 
     <title>Riot Games</title>
 </head>
 
 <body>
-
     <main>
         <section class="login">
-
             <div class="wrapper">
-                <img src="images/riot-logo.png" alt="riot games" class="login__logo">
+                <img src="src/images/riot-logo.png" alt="riot games" class="login__logo">
 
                 <h1 class="login__title">Fazer login</h1>
 
@@ -34,13 +32,13 @@
 
                 <div class="login__icons">
                     <button type="button" class="icons__button">
-                        <img src="images/facebook-icon.png" alt="facebook">
+                        <img src="src/images/facebook-icon.png" alt="facebook">
                     </button>
                     <button type="button" class="icons__button">
-                        <img src="images/google-icon.png" alt="google">
+                        <img src="src/images/google-icon.png" alt="google">
                     </button>
                     <button type="button" class="icons__button">
-                        <img src="images/apple-icon.png" alt="apple">
+                        <img src="src/images/apple-icon.png" alt="apple">
                     </button>
                 </div>
 
@@ -61,13 +59,11 @@
                 <a href="#" class="login__link">não consegue iniciar sessão?</a>
                 <a href="#" class="login__link">criar conta</a>
             </div>
-
         </section>
 
         <section class="wallpaper">
         </section>
     </main>
-
 </body>
 
 </html>
